# trajopt

./: CMakeLists.txt
python_examples/: test_com.py
src/trajopt/: CMakeLists.txt  kinematic_terms.cpp  kinematic_terms.hpp  problem_description.cpp  problem_description.hpp
